flicker fix 6

--- a/components/layout/Face.module.css
+++ b/components/layout/Face.module.css
@@ -6,8 +6,6 @@
     /* MAYBE REMOVE */
     justify-content: center;
 
-    backface-visibility: hidden;
-
     /* box-shadow: 0 0 0 0.5rem red; */
 }
 
