--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,8 @@ body::-webkit-scrollbar {
     background-position: center;
     
     height: 100vh;
-    width: 100vw;
+    left: 0;
+    right: 0;
 
     z-index: -1;
 }
